# aavegotchi-rust-kinship-bot

./: Cargo.toml
src/: main.rs
