[package]
name = "aavegotchi-rust-kinship"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow =  { version = "1.0.62" }
chrono = "0.4.19"
env-file-reader = "0.3.0"
ethers = {version = "0.17.0", features = ["legacy", "openssl"]}
gql_client = "1.0.6"
gumdrop = "0.8.1"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
